Added a new submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 	url = https://github.com/daneden/animate.css.git
 [submodule "Existing repositories/typed.js"]
 	url = https://github.com/mattboldt/typed.js.git
+[submodule "existing repositories/particles.Js"]
+	path = existing repositories/particles.Js
+	url = https://github.com/VincentGarreau/particles.js.git
